# vklib

./: .gitignore  CMakeLists.txt  premake5.lua  sqlite.db  vklib.sln  vklib.vcxproj  vklib.vcxproj.filters
api/: fs.md  vkapi.md
dep/lua/lib/: lua.exp
dep/mongodb/include/: mongoc-config.h  mongoc-version.h
dep/mongodb/include/bson/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  bson-config.h  bson-version.h  cmake_install.cmake
dep/mongodb/lib/: bson-1.0.lib  mongoc-1.0.lib
src/: dirent.h  vklib.c  vklib.h  vklib_compat.c  vklib_compat.h  vklib_fs.c  vklib_fs.h  vklib_mongo.c  vklib_mongo.h  vklib_requests.c  vklib_requests.h  vklib_sqlite.c  vklib_sqlite.h
src/vklib_mongo/: common.h
tests/: filesystem.lua  mongodb.lua  opening.lua  requests.lua  sqlite.lua  sqlite_helper.lua
